# Hobby-Projects

./: .gitignore  .mxproject  .project  DC_Motor_SpeedControl_PWM Debug.launch  DC_Motor_SpeedControl_PWM.ioc  README.md
DC_Motor_SpeedControl_PWM/: .cproject  README.md
Debug/: Lab7_StarterProject.elf  Lab7_StarterProject.list  Lab7_StarterProject.map  makefile  objects.list
body_control_zonal_lighting/: .gitignore  CHANGES_PHASE10.md  CHANGES_PHASE11.md  CHANGES_PHASE12.md  CHANGES_PHASE2.md  CHANGES_PHASE3.md  CHANGES_PHASE4.md  CHANGES_PHASE5.md  CHANGES_PHASE6.md  CHANGES_PHASE7.md  CHANGES_PHASE8.md  CHANGES_PHASE9.md  CLAUDE.md  CMakeLists.txt  README.md
body_control_zonal_lighting/app/: CMakeLists.txt
body_control_zonal_lighting/app/central_zone_controller/: main.cpp
body_control_zonal_lighting/app/diagnostic_console/: main.cpp
body_control_zonal_lighting/app/hmi_control_panel/: LightingHmi.qml  main.cpp  qml_hmi_bridge.cpp  qml_hmi_bridge.hpp  qt_main.cpp  resources.qrc
body_control_zonal_lighting/app/rear_lighting_node_simulator/: main.cpp
body_control_zonal_lighting/app/stm32_nucleo_h753zi/: main.cpp
body_control_zonal_lighting/app/zephyr_nucleo_h753zi/: CMakeLists.txt  main.cpp  prj.conf
body_control_zonal_lighting/app/zephyr_nucleo_h753zi/boards/: nucleo_h753zi.overlay
body_control_zonal_lighting/cmake/: arm-none-eabi-gcc.cmake
body_control_zonal_lighting/config/vsomeip/: central_zone_controller.json  diagnostic_console.json  hmi_control_panel.json  rear_lighting_node_simulator.json
body_control_zonal_lighting/doc/: communication_matrix.md  demo_walkthrough.md  demo_walkthrough_hardware.md  ota_specification.md  project_overview.md  service_interface_specification.md  state_machine_specification.md  system_architecture.md  verification_and_test_plan.md
body_control_zonal_lighting/include/body_control/lighting/application/: central_zone_controller.hpp  command_arbitrator.hpp  fault_manager.hpp  lamp_state_manager.hpp  node_health_monitor.hpp  node_health_source_interface.hpp  ota_session_manager.hpp  rear_lighting_function_manager.hpp  uds_request_handler.hpp
body_control_zonal_lighting/include/body_control/lighting/domain/: fault_types.hpp  lamp_command_types.hpp  lamp_status_types.hpp  lighting_constants.hpp  lighting_payload_codec.hpp  lighting_service_ids.hpp  uds_service_ids.hpp
body_control_zonal_lighting/include/body_control/lighting/hmi/: hmi_action_types.hpp  hmi_command_mapper.hpp  hmi_display_strings.hpp  hmi_view_model.hpp  main_window.hpp
body_control_zonal_lighting/include/body_control/lighting/platform/linux/: linux_clock.hpp  linux_logger.hpp  process_signal_handler.hpp
body_control_zonal_lighting/include/body_control/lighting/platform/stm32/: ethernet_link_supervisor.hpp  gpio_output_driver.hpp  nucleo_h753zi_pin_map.hpp  stm32_diagnostic_logger.hpp
body_control_zonal_lighting/include/body_control/lighting/service/: diagnostic_service_interface.hpp  operator_service_consumer.hpp  operator_service_interface.hpp  operator_service_provider.hpp  rear_lighting_service_consumer.hpp  rear_lighting_service_interface.hpp  rear_lighting_service_provider.hpp
body_control_zonal_lighting/include/body_control/lighting/transport/: doip_server.hpp  someip_message_builder.hpp  someip_message_parser.hpp  transport_adapter_interface.hpp  transport_status.hpp
body_control_zonal_lighting/include/body_control/lighting/transport/lwip/: lwip_udp_transport_adapter.hpp
body_control_zonal_lighting/src/: CMakeLists.txt
body_control_zonal_lighting/src/application/: central_zone_controller.cpp  command_arbitrator.cpp  fault_manager.cpp  lamp_state_manager.cpp  node_health_monitor.cpp  ota_session_manager.cpp  rear_lighting_function_manager.cpp  uds_request_handler.cpp
body_control_zonal_lighting/src/domain/: domain_type_validators.cpp  lighting_payload_codec.cpp
body_control_zonal_lighting/src/hmi/: hmi_command_mapper.cpp  hmi_display_strings.cpp  hmi_view_model.cpp  main_window.cpp
body_control_zonal_lighting/src/platform/linux/: linux_clock.cpp  linux_logger.cpp  process_signal_handler.cpp
body_control_zonal_lighting/src/platform/stm32/: ethernet_link_supervisor.cpp  ethernetif.cpp  gpio_output_driver.cpp  stm32_diagnostic_logger.cpp
body_control_zonal_lighting/src/platform/zephyr/: zephyr_gpio_driver.cpp  zephyr_gpio_driver.hpp  zephyr_udp_transport.cpp  zephyr_udp_transport.hpp
body_control_zonal_lighting/src/service/: operator_service_consumer.cpp  operator_service_provider.cpp  rear_lighting_service_consumer.cpp  rear_lighting_service_provider.cpp
body_control_zonal_lighting/src/transport/: doip_server.cpp  someip_message_builder.cpp  someip_message_parser.cpp
body_control_zonal_lighting/src/transport/ethernet/: direct_udp_transport_adapter.cpp  ethernet_frame_adapter.cpp  udp_transport_adapter.cpp
body_control_zonal_lighting/src/transport/lwip/: lwip_udp_transport_adapter.cpp
body_control_zonal_lighting/src/transport/vsomeip/: vsomeip_client_adapter.cpp  vsomeip_operator_client_adapter.cpp  vsomeip_operator_server_adapter.cpp  vsomeip_runtime_manager.cpp  vsomeip_server_adapter.cpp
body_control_zonal_lighting/test/: CMakeLists.txt
body_control_zonal_lighting/test/integration/: CMakeLists.txt  test_controller_arbitration_via_operator.cpp  test_hazard_priority_behavior.cpp  test_node_timeout_behavior.cpp  test_operator_service_roundtrip.cpp  test_request_response_path.cpp
body_control_zonal_lighting/test/unit/: CMakeLists.txt  test_command_arbitrator.cpp  test_fault_manager.cpp  test_lamp_state_manager.cpp  test_lighting_payload_codec.cpp  test_ota_handler.cpp  test_rear_lighting_function_manager.cpp  test_uds_request_handler.cpp
body_control_zonal_lighting/tools/: build_linux.sh  capture_network_trace.sh  git_snapshot_push.sh  run_controller.sh  run_diagnostic_console.sh  run_hmi.sh  run_hmi_qt.sh  run_simulator.sh  system_smoke_test.sh
body_control_zonal_lighting/tools/ota_client/: ota_client.py  requirements.txt
body_control_zonal_lighting/tools/uds_client/: bcl_diagnostic_client.py  requirements.txt
(+53 files in other folders)
